--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@payloadcms/payload-cloud": "^3.5.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
     "graphql": "^16.9.0",
+    "leaflet": "^1.9.4",
+    "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.0.3",
     "payload": "^3.5.0",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8",
