--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@payloadcms/next": "^3.5.0",
     "@payloadcms/payload-cloud": "^3.5.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
+    "framer-motion": "^12.1.0",
     "graphql": "^16.9.0",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
