--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@payloadcms/next": "^3.5.0",
     "@payloadcms/payload-cloud": "^3.5.0",
     "@payloadcms/richtext-lexical": "^3.5.0",
+    "@uiw/react-color-colorful": "^2.3.4",
     "framer-motion": "^12.1.0",
     "graphql": "^16.9.0",
+    "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
     "next": "15.0.3",
     "payload": "^3.5.0",
+    "re-resizable": "^6.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-leaflet": "^5.0.0"
