--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.0",
+    "@monaco-editor/react": "^4.7.0-rc.0",
     "@payloadcms/db-postgres": "^3.5.0",
-    "@payloadcms/next": "^3.5.0",
+    "@payloadcms/next": "^3.23.0",
     "@payloadcms/payload-cloud": "^3.5.0",
-    "@payloadcms/richtext-lexical": "^3.5.0",
+    "@payloadcms/richtext-lexical": "^3.23.0",
+    "@payloadcms/storage-vercel-blob": "^3.24.0",
     "@uiw/react-color-colorful": "^2.3.4",
     "framer-motion": "^12.1.0",
     "graphql": "^16.9.0",
     "html2canvas": "^1.4.1",
     "leaflet": "^1.9.4",
     "leaflet-defaulticon-compatibility": "^0.1.2",
-    "next": "15.0.3",
-    "payload": "^3.5.0",
+    "next": "^15.1.7",
+    "payload": "^3.23.0",
     "re-resizable": "^6.10.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -33,5 +35,9 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.7.2"
+  },
+  "resolutions": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
 }
