included the vercel blob storage again

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 # Added by Payload
 DATABASE_URI=postgresql://postgres:CymHGjzZgmOBhcMxrwtgOPoxeJJogTzk@autorack.proxy.rlwy.net:36540/railway
 PAYLOAD_SECRET=53ec087727f3899497b65e06
-BLOB_READ_WRITE_TOKEN=your_blob_token_here
+BLOB_READ_WRITE_TOKEN="vercel_blob_rw_We8zJxs9yfJtuY8B_3TdgMiL8Ff0Bd8QjcrMUlNA8wRORm0"
