--- a/package.json
+++ b/package.json
@@ -30,14 +30,21 @@
     "react-leaflet": "^5.0.0"
   },
   "devDependencies": {
+    "@tailwindcss/postcss": "^4.0.9",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.0.9",
     "typescript": "^5.7.2"
   },
   "resolutions": {
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
-  }
+  },
+  "description": "Archive of the traditional wrappers in Rivers State.",
+  "main": "postcss.config.js",
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
