--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@floating-ui/react": "^0.27.0",
+    "@lexical/react": "^0.31.1",
     "@monaco-editor/react": "^4.7.0-rc.0",
     "@payloadcms/db-postgres": "^3.5.0",
     "@payloadcms/next": "^3.23.0",
@@ -31,6 +32,7 @@
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.0.9",
+    "@types/react": "19.1.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
